[[bin]]
name = "toydb"
path = "src/main.rs"

[dependencies]

[lib]
name = "toydb"

[package]
name = "toy-db-ex"
description = "A distributed SQL database"
version = "0.1.0"
edition = "2021"
default-run = "toydb"
authors = ["lamhai1401 <lamthanhhai141@gmail.com>"]
homepage = "https://github.com/lamhai1401/toy-db-ex"
repository = "https://github.com/lamhai1401/toy-db-ex"
